--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.android.application'
 
 android {
@@ -18,6 +19,10 @@ android {
         }
     }
 }
+greendao {
+    schemaVersion 1
+    targetGenDir 'src/main/java'
+}
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -33,6 +38,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
 
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    compile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'org.greenrobot:greendao:3.0.1'
 
-
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
 }
