--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,25 +25,26 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".ui.activities.MainActivity">
 
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN"/> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
-            <!-- </intent-filter> -->
+            <!--             <intent-filter>
+                                     <action android:name="android.intent.action.MAIN"/>
+                                     <category android:name="android.intent.category.LAUNCHER"/>
+                    </intent-filter>-->
         </activity>
         <activity android:name=".ui.activities.AuthActivity">
-        </activity>
-        <activity android:name=".ui.activities.UserListActivity"
-                  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.ProfileUserActivity"
-            >
+        <activity android:name=".ui.activities.UserListActivity">
+            <!--            <intent-filter>
+                            <action android:name="android.intent.action.MAIN"/>
+                            <category android:name="android.intent.category.LAUNCHER"/>
+                        </intent-filter>-->
+        </activity>
+        <activity
+            android:name=".ui.activities.ProfileUserActivity"
+            android:parentActivityName=".ui.activities.UserListActivity">
         </activity>
     </application>
 
